"""
HelloHive Collaborative Aggregate - Bio/Sci AI/Humean Integration

This demonstrates the complete integration of Jules' foundational architecture
with Sacred Codon patterns and collaborative Bio/Sci AI/Humean validation.

It shows how human intuition (Jules enthusiasm), critical thinking (Humean skepticism),
and empirical measurement can work together to validate architectural decisions.
"""

from typing import List, Dict, Any
from datetime import datetime, timezone
from dna_core.pollen_protocol_pb2 import PollenEnvelope
from dna_core.royal_jelly import (
    SacredCodonType,
    create_sacred_command,
    CollaborativeValidator,
    CollaborativeValidationResult,
    create_validation_context,
    ValidationSeverity,
)
from .sacred_aggregate import HelloHiveSacredAggregate


class HelloHiveCollaborativeAggregate(HelloHiveSacredAggregate):
    """
    Advanced HelloHive Aggregate with full Bio/Sci AI/Humean collaborative validation.

    This aggregate demonstrates:
    - Jules-style enthusiastic validation for architectural decisions
    - Humean skeptical analysis for robust critical thinking
    - Empirical measurement validation for data-driven decisions
    - Collaborative consensus building between human and AI perspectives
    - Integration with the molecular chemistry system concepts

    Sacred Principle: "Collaboration is the bridge between wisdom and implementation"
    """

    def __init__(self, aggregate_id: str):
        super().__init__(aggregate_id)
        self.collaborative_validator = CollaborativeValidator()
        self.validation_history: List[CollaborativeValidationResult] = []
        self.collaboration_metrics = {
            "total_validations": 0,
            "jules_approval_rate": 0.0,
            "humean_concern_rate": 0.0,
            "empirical_success_rate": 0.0,
            "overall_consensus": 0.0,
        }

    def create_greeting_with_collaboration(
        self, greeting_data: Dict[str, Any], enable_human_review: bool = False
    ) -> List[PollenEnvelope]:
        """
        Create greeting with full collaborative validation.

        This demonstrates the complete Bio/Sci AI/Humean protocol:
        1. Create Sacred Command for greeting creation
        2. Validate through Jules-style enthusiasm
        3. Apply Humean skeptical analysis
        4. Perform empirical measurement validation
        5. Build consensus and proceed or request human review
        """

        # Create Sacred Command following C→A→G pattern
        command = create_sacred_command(
            command_type="create_greeting_collaborative",
            payload=greeting_data,
            codon_type=SacredCodonType.HANDLE_COMMAND,
            source="collaborative_connector",
        )

        # Create validation context
        context = create_validation_context(
            codon_diversity=len(
                set(cmd.codon_type for cmd in self.get_codon_history())
            ),
            validation_count=len(self.validation_history),
            similar_commands_successful=len(
                [v for v in self.validation_history if v.overall_approval]
            ),
            custom_context={
                "aggregate_type": "hello_hive",
                "greeting_count": self.greeting_count,
                "component_maturity": "stable"
                if self.greeting_count > 10
                else "developing",
            },
        )

        # Perform collaborative validation
        validation_result = self.collaborative_validator.validate_command(
            command=command,
            context=context,
            measurements=self._generate_greeting_measurements(greeting_data),
            enable_human_review=enable_human_review,
        )

        # Record validation history
        self.validation_history.append(validation_result)
        self._update_collaboration_metrics(validation_result)

        # Log collaborative feedback
        self._log_collaborative_feedback(validation_result)

        # Check if human review is required
        if validation_result.requires_human_review:
            print(f"🧑‍🤝‍🧑 Human review requested for command {command.command_id}")
            print(f"   Confidence: {validation_result.confidence_score:.2f}")
            print(f"   Consensus: {validation_result.consensus_level:.2f}")
            # In a real system, this would pause and wait for human input

        # Proceed if validation approves
        if validation_result.overall_approval:
            return self.execute_handle_command_codon(command)
        else:
            # Handle validation failure
            blocking_concerns = [
                f
                for f in validation_result.feedback_list
                if f.severity == ValidationSeverity.BLOCK
            ]
            concern_messages = [f.message for f in blocking_concerns]

            raise ValueError(
                f"Collaborative validation failed: {'; '.join(concern_messages)}"
            )

    def query_with_empirical_validation(
        self, query_params: Dict[str, Any]
    ) -> Dict[str, Any]:
        """
        Query data with empirical validation of the query process.

        Demonstrates how Bio/Sci AI protocols can validate even read operations
        to ensure they follow best practices and provide valuable insights.
        """

        # Create query command
        query_command = create_sacred_command(
            command_type="collaborative_query",
            payload=query_params,
            codon_type=SacredCodonType.QUERY_DATA,
            source="collaborative_query_connector",
        )

        # Create query-specific context
        context = create_validation_context(
            custom_context={
                "query_complexity": len(query_params),
                "data_freshness": "current",
                "query_purpose": query_params.get("purpose", "unknown"),
            }
        )

        # Validate the query approach
        validation_result = self.collaborative_validator.validate_command(
            command=query_command,
            context=context,
            measurements=self._generate_query_measurements(query_params),
        )

        # Execute query if validation passes
        if validation_result.overall_approval:
            query_result = self.execute_query_data_codon(query_command)

            # Add validation metadata to result
            query_result["validation_metadata"] = {
                "confidence_score": validation_result.confidence_score,
                "consensus_level": validation_result.consensus_level,
                "jules_feedback": next(
                    f.message
                    for f in validation_result.feedback_list
                    if f.validator_source == "jules"
                ),
                "validation_timestamp": datetime.now(timezone.utc).isoformat(),
            }

            return query_result
        else:
            return {
                "error": "Query validation failed",
                "validation_feedback": [
                    f.message for f in validation_result.feedback_list
                ],
                "suggestions": validation_result.recommendations,
            }

    def react_with_consensus_building(
        self, external_event: PollenEnvelope
    ) -> List[PollenEnvelope]:
        """
        React to external events with consensus building between validators.

        This shows how different AI perspectives can collaborate to determine
        the best response to external stimuli, combining enthusiasm, skepticism,
        and empirical analysis.
        """

        # Create reaction command
        reaction_command = self._translate_event_to_command(external_event)

        # Enhanced context for event reactions
        context = create_validation_context(
            custom_context={
                "event_source": external_event.aggregate_id,
                "event_type": external_event.event_type,
                "reaction_urgency": "normal",  # Could be derived from event content
                "historical_reactions": len(
                    [
                        cmd
                        for cmd in self.get_codon_history()
                        if cmd.codon_type == SacredCodonType.REACT_TO_EVENT
                    ]
                ),
            }
        )

        # Validate reaction approach
        validation_result = self.collaborative_validator.validate_command(
            command=reaction_command,
            context=context,
            measurements=self._generate_reaction_measurements(external_event),
        )

        # Build consensus on reaction strategy
        if validation_result.consensus_level < 0.6:
            print(
                f"⚖️ Low consensus ({validation_result.consensus_level:.2f}) on reaction strategy"
            )
            print("   Attempting consensus building...")

            # In a full implementation, this could trigger additional validation rounds
            # or human consultation to build stronger consensus

        # Execute reaction if validation approves
        if validation_result.overall_approval:
            return self.execute_react_to_event_codon(external_event)
        else:
            # Return minimal safe response
            return [
                self._create_event(
                    "MinimalReactionEvent",
                    {
                        "original_event_id": external_event.event_id,
                        "reaction_type": "acknowledgment_only",
                        "reason": "insufficient_consensus_for_full_reaction",
                    },
                )
            ]

    def _generate_greeting_measurements(
        self, greeting_data: Dict[str, Any]
    ) -> Dict[str, float]:
        """Generate empirical measurements for greeting creation"""
        measurements = {}

        # Performance: Based on message complexity and processing requirements
        message_length = len(greeting_data.get("message", ""))
        measurements["performance_score"] = max(
            0.3, min(1.0, 1.0 - (message_length / 500))
        )

        # Accuracy: Based on completeness of greeting data
        required_fields = ["message", "sender"]
        provided_fields = sum(
            1 for field in required_fields if greeting_data.get(field)
        )
        measurements["accuracy_score"] = provided_fields / len(required_fields)

        # Reliability: Based on greeting success history
        historical_success_rate = len(
            [v for v in self.validation_history if v.overall_approval]
        )
        total_attempts = max(1, len(self.validation_history))
        measurements["reliability_score"] = historical_success_rate / total_attempts

        return measurements

    def _generate_query_measurements(
        self, query_params: Dict[str, Any]
    ) -> Dict[str, float]:
        """Generate empirical measurements for query operations"""
        measurements = {}

        # Performance: Simpler queries perform better
        query_complexity = len(query_params)
        measurements["performance_score"] = max(
            0.5, min(1.0, 1.0 - (query_complexity / 10))
        )

        # Accuracy: Based on query specificity
        has_specific_params = any(
            isinstance(v, str) and len(v) > 3 for v in query_params.values()
        )
        measurements["accuracy_score"] = 0.8 if has_specific_params else 0.5

        # Reliability: Queries are generally reliable for this simple aggregate
        measurements["reliability_score"] = 0.9

        return measurements

    def _generate_reaction_measurements(
        self, event: PollenEnvelope
    ) -> Dict[str, float]:
        """Generate empirical measurements for event reactions"""
        measurements = {}

        # Performance: Based on event complexity
        event_payload_size = len(str(dict(event.payload)))
        measurements["performance_score"] = max(
            0.4, min(1.0, 1.0 - (event_payload_size / 1000))
        )

        # Accuracy: Based on event type recognition
        known_event_types = [
            "HelloHiveCreatedEvent",
            "GreetingReceivedEvent",
            "GreetingResponseCreated",
        ]
        measurements["accuracy_score"] = (
            0.9 if event.event_type in known_event_types else 0.6
        )

        # Reliability: Event reactions are moderately reliable
        measurements["reliability_score"] = 0.75

        return measurements

    def _log_collaborative_feedback(
        self, validation_result: CollaborativeValidationResult
    ):
        """Log collaborative feedback in a readable format"""
        print(
            f"\n🤝 Collaborative Validation for Command {validation_result.command_id}"
        )
        print(
            f"   Overall Approval: {'✅' if validation_result.overall_approval else '❌'}"
        )
        print(f"   Confidence Score: {validation_result.confidence_score:.2f}")
        print(f"   Consensus Level: {validation_result.consensus_level:.2f}")

        print("\n   Individual Validator Feedback:")
        for feedback in validation_result.feedback_list:
            emoji = {"jules": "🎉", "humean_skeptic": "🤔", "empirical_analyzer": "📊"}
            validator_emoji = emoji.get(feedback.validator_source, "🔍")
            severity_emoji = {
                "pass": "✅",
                "warning": "⚠️",
                "concern": "❗",
                "block": "🚫",
            }
            severity_indicator = severity_emoji.get(feedback.severity.value, "❓")

            print(
                f"     {validator_emoji} {feedback.validator_source}: {severity_indicator}"
            )
            print(f"       {feedback.message}")
            print(f"       Confidence: {feedback.confidence:.2f}")
            if feedback.emotional_tone:
                print(f"       Tone: {feedback.emotional_tone}")

        if validation_result.recommendations:
            print("\n   📝 Collaborative Recommendations:")
            for rec in validation_result.recommendations[:3]:  # Show top 3
                print(f"     • {rec}")

    def _update_collaboration_metrics(
        self, validation_result: CollaborativeValidationResult
    ):
        """Update collaboration effectiveness metrics"""
        self.collaboration_metrics["total_validations"] += 1

        # Calculate running averages
        n = self.collaboration_metrics["total_validations"]

        # Jules approval rate
        jules_feedback = next(
            f for f in validation_result.feedback_list if f.validator_source == "jules"
        )
        jules_approved = jules_feedback.severity.value in ["pass", "warning"]
        self.collaboration_metrics["jules_approval_rate"] = (
            self.collaboration_metrics["jules_approval_rate"] * (n - 1)
            + (1.0 if jules_approved else 0.0)
        ) / n

        # Humean concern rate
        humean_feedback = next(
            f
            for f in validation_result.feedback_list
            if f.validator_source == "humean_skeptic"
        )
        humean_concerned = humean_feedback.severity.value in ["concern", "block"]
        self.collaboration_metrics["humean_concern_rate"] = (
            self.collaboration_metrics["humean_concern_rate"] * (n - 1)
            + (1.0 if humean_concerned else 0.0)
        ) / n

        # Empirical success rate
        empirical_feedback = next(
            f
            for f in validation_result.feedback_list
            if f.validator_source == "empirical_analyzer"
        )
        empirical_passed = empirical_feedback.severity.value == "pass"
        self.collaboration_metrics["empirical_success_rate"] = (
            self.collaboration_metrics["empirical_success_rate"] * (n - 1)
            + (1.0 if empirical_passed else 0.0)
        ) / n

        # Overall consensus
        self.collaboration_metrics["overall_consensus"] = (
            self.collaboration_metrics["overall_consensus"] * (n - 1)
            + validation_result.consensus_level
        ) / n

    def get_collaboration_health_report(self) -> Dict[str, Any]:
        """Get comprehensive collaboration health and effectiveness report"""
        return {
            "aggregate_id": self.id,
            "total_commands_processed": len(self.get_codon_history()),
            "total_validations_performed": len(self.validation_history),
            "collaboration_metrics": self.collaboration_metrics,
            "recent_validation_trends": self._analyze_recent_trends(),
            "sacred_codon_compliance": self._calculate_compliance_score(),
            "bio_sci_ai_humean_alignment": self._calculate_protocol_alignment(),
            "recommendations": self._generate_collaboration_recommendations(),
        }

    def _analyze_recent_trends(self) -> Dict[str, Any]:
        """Analyze trends in recent validation results"""
        recent_validations = self.validation_history[-10:]  # Last 10 validations

        if not recent_validations:
            return {"message": "Insufficient data for trend analysis"}

        recent_approval_rate = sum(
            1 for v in recent_validations if v.overall_approval
        ) / len(recent_validations)
        recent_avg_confidence = sum(
            v.confidence_score for v in recent_validations
        ) / len(recent_validations)
        recent_avg_consensus = sum(v.consensus_level for v in recent_validations) / len(
            recent_validations
        )

        return {
            "recent_approval_rate": recent_approval_rate,
            "recent_avg_confidence": recent_avg_confidence,
            "recent_avg_consensus": recent_avg_consensus,
            "trend_direction": "improving"
            if recent_approval_rate > 0.7
            else "needs_attention",
        }

    def _calculate_protocol_alignment(self) -> float:
        """Calculate alignment with Bio/Sci AI/Humean protocols"""
        if not self.validation_history:
            return 0.0

        # Alignment factors
        jules_engagement = self.collaboration_metrics["jules_approval_rate"]
        humean_rigor = (
            1.0 - self.collaboration_metrics["humean_concern_rate"]
        )  # Less concerns = more rigor
        empirical_reliability = self.collaboration_metrics["empirical_success_rate"]
        consensus_building = self.collaboration_metrics["overall_consensus"]

        # Weighted average
        alignment_score = (
            jules_engagement * 0.25  # 25% Jules enthusiasm
            + humean_rigor * 0.25  # 25% Humean rigor
            + empirical_reliability * 0.25  # 25% Empirical validation
            + consensus_building * 0.25  # 25% Consensus building
        )

        return alignment_score

    def _generate_collaboration_recommendations(self) -> List[str]:
        """Generate recommendations for improving collaboration effectiveness"""
        recommendations = []

        protocol_alignment = self._calculate_protocol_alignment()

        if protocol_alignment < 0.6:
            recommendations.append(
                "🔄 Focus on improving Bio/Sci AI/Humean protocol alignment"
            )

        if self.collaboration_metrics["jules_approval_rate"] < 0.6:
            recommendations.append(
                "🎉 Consider more innovative approaches to increase Jules engagement"
            )

        if self.collaboration_metrics["humean_concern_rate"] > 0.4:
            recommendations.append(
                "🤔 Address recurring Humean skeptic concerns through better evidence"
            )

        if self.collaboration_metrics["empirical_success_rate"] < 0.7:
            recommendations.append(
                "📊 Improve empirical measurements and data collection"
            )

        if self.collaboration_metrics["overall_consensus"] < 0.6:
            recommendations.append(
                "⚖️ Work on building stronger consensus between validation perspectives"
            )

        if protocol_alignment >= 0.8:
            recommendations.append(
                "✨ Excellent collaboration! Consider sharing patterns with other components"
            )

        return recommendations


# Demonstration function showing full Bio/Sci AI/Humean integration
def demonstrate_collaborative_protocols():
    """Comprehensive demonstration of Bio/Sci AI/Humean collaborative protocols"""

    print("🧬🤖👥 Bio/Sci AI/Humean Collaborative Protocols Demonstration")
    print("=" * 70)

    # Create collaborative aggregate
    collab_aggregate = HelloHiveCollaborativeAggregate("hello-hive-collab-001")

    # 1. Demonstrate collaborative greeting creation
    print("\n1. 🤝 Collaborative Greeting Creation with Full Validation")
    try:
        greeting_events = collab_aggregate.create_greeting_with_collaboration(
            {
                "message": "Hello from the collaborative molecular hive!",
                "sender": "Bio/Sci AI Team",
                "priority": "high",
                "innovation_level": "experimental",
            }
        )
        print(f"   ✅ Successfully created greeting with {len(greeting_events)} events")
    except ValueError as e:
        print(f"   ❌ Validation failed: {e}")

    # 2. Demonstrate empirical query validation
    print("\n2. 📊 Empirical Query Validation")
    query_result = collab_aggregate.query_with_empirical_validation(
        {
            "query_type": "greeting_analytics",
            "include_metrics": True,
            "purpose": "collaboration_assessment",
        }
    )
    print(
        f"   Query confidence: {query_result.get('validation_metadata', {}).get('confidence_score', 'N/A')}"
    )

    # 3. Demonstrate consensus-building event reaction
    print("\n3. ⚖️ Consensus Building for Event Reactions")
    # Create mock external event
    mock_event = collab_aggregate._create_event(
        "ExternalCollaborationRequest",
        {
            "request_type": "partnership",
            "from_hive": "research_hive_alpha",
            "collaboration_level": "deep_integration",
        },
    )
    reaction_events = collab_aggregate.react_with_consensus_building(mock_event)
    print(f"   Generated {len(reaction_events)} consensus-based reaction events")

    # 4. Show collaboration health report
    print("\n4. 📈 Collaboration Health Report")
    health_report = collab_aggregate.get_collaboration_health_report()
    print(
        f"   Bio/Sci AI/Humean Alignment: {health_report['bio_sci_ai_humean_alignment']:.2f}"
    )
    print(
        f"   Overall Consensus: {health_report['collaboration_metrics']['overall_consensus']:.2f}"
    )
    print(
        f"   Jules Approval Rate: {health_report['collaboration_metrics']['jules_approval_rate']:.2f}"
    )
    print(
        f"   Recent Trend: {health_report['recent_validation_trends'].get('trend_direction', 'unknown')}"
    )

    # 5. Show recommendations
    print("\n5. 💡 Collaborative Recommendations:")
    recommendations = health_report["recommendations"]
    for i, rec in enumerate(recommendations[:3], 1):
        print(f"   {i}. {rec}")

    print("\n🎉 Collaborative Protocol Demonstration Complete!")
    print(f"   Sacred Compliance: {collab_aggregate._calculate_compliance_score():.2f}")
    print(f"   Total Validations: {len(collab_aggregate.validation_history)}")

    return collab_aggregate


if __name__ == "__main__":
    demonstrate_collaborative_protocols()
